logging layers refactor